OAEWDGT-169 Follow-up on review from @christianv: Removing layout issue in UI after deleting user https://jira.sakaiproject.org/browse/OAEWDGT-169

--- a/app/assets/stylesheets/admin.css.scss
+++ b/app/assets/stylesheets/admin.css.scss
@@ -64,7 +64,6 @@
         margin: 0;
         li {
             display: inline-block;
-            float: left;
             margin: 12px 0;
             width: 33%;
         }
